Working on the display Style - Incomplete

--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -7,20 +7,24 @@
   <title>Caesar Cipher Tool</title>
 </head>
 <body>
-  <h1>Caesar Cipher Tool</h1>
+  
 
   <main>
+
+    <h1>Caesar Cipher Tool</h1>
+
     <div class="encrypt">
       <h3>Caesar Cipher Encryption</h3>
       <label for="key">Cipher Key</label>
       <input type="text" name="key" placeholder="Enter Cipher key (e.g. 13)" id="encrypt-key">
       <textarea name="PlainText" id="plain-text" cols="30" rows="10"></textarea>
-      <button>submit</button>
+      <button>Submit</button>
     </div>
 
     <div class="cipher">
       <p id="cipher-message"></p>
     </div>
+    
   </main>
 
   <script src="main.js"></script>
