Updating the README.md file and making the key input field required

--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -16,7 +16,7 @@
     <div class="encrypt">
       <h2>Caesar Cipher Encryption</h2>
       <label for="key">Cipher Key</label>
-      <input type="text" name="key" placeholder="Enter Cipher key (e.g. 13)" id="encrypt-key">
+      <input type="text" name="key" placeholder="Enter Cipher key (e.g. 13)" id="encrypt-key" required/>
       <textarea name="PlainText" id="plain-text" cols="30" rows="10"></textarea>
       <button>Submit</button>
     </div>
