--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -18,7 +18,7 @@
       <label for="key">Cipher Key</label>
       <input type="text" name="key" placeholder="Enter Cipher key (e.g. 13)" id="encrypt-key" required/>
       <textarea name="PlainText" id="plain-text" cols="30" rows="10"></textarea>
-      <button>Submit</button>
+      <button>Encrypt</button>
     </div>
 
     <div class="cipher">
