--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <title>Caesar Cipher Tool</title>
 </head>
@@ -12,6 +13,18 @@
   <main>
 
     <h1>Caesar Cipher Tool</h1>
+
+    <div class="container">
+      <h2>Here's a fun tool to encrypt and decrypt any text using the Caesar Cipher.</h2>
+      <p>Fool eavesdroppers by encrypting your messages and text with this tool</p>
+      <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+        <label class="btn" for="btnradio1">Encrypt</label>
+      
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+        <label class="btn" for="btnradio2">Decrypt</label>
+      </div>
+    </div>
 
     <div class="encrypt">
       <h2>Caesar Cipher Encryption</h2>
@@ -28,5 +41,6 @@
   </main>
 
   <script src="main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
