Adding btn-primary class and removing the default checked setting

--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -18,11 +18,11 @@
       <h2>Here's a fun tool to encrypt and decrypt any text using the Caesar Cipher.</h2>
       <p>Fool eavesdroppers by encrypting your messages and text with this tool</p>
       <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-        <label class="btn" for="btnradio1">Encrypt</label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
+        <label class="btn btn-primary" for="btnradio1">Encrypt</label>
       
         <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-        <label class="btn" for="btnradio2">Decrypt</label>
+        <label class="btn btn-primary" for="btnradio2">Decrypt</label>
       </div>
     </div>
 
