Changing the textarea from custom to a Bootstrap one

--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -30,7 +30,7 @@
       <h2>Caesar Cipher Encryption</h2>
       <label for="key">Cipher Key</label>
       <input type="text" name="key" placeholder="Enter Cipher key (e.g. 13)" id="encrypt-key" required/>
-      <textarea name="PlainText" id="plain-text" cols="30" rows="10"></textarea>
+      <textarea class="form-control" id="Textarea1" rows="3"></textarea>
       <button>Encrypt</button>
     </div>
 
