Adding unique id's to the decrypt section

--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -63,7 +63,7 @@
 
     <div class="encrypt" id="decrypt">
       <h2>Caesar Cipher Decryption</h2>
-      <select class="form-select form-select-lg mb-3" aria-label="Large select example" id="cipher-keys">
+      <select class="form-select form-select-lg mb-3" aria-label="Large select example" id="decipher-keys">
         <option selected>Select a Cipher Key Decryption</option>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -92,8 +92,8 @@
         <option value="25">25</option>
       </select>
       
-      <textarea class="form-control" id="Textarea1" rows="3"></textarea>
-      <button>Decrypt</button>
+      <textarea class="form-control" id="Textarea2" rows="3"></textarea>
+      <button id="decrypt-btn">Decrypt</button>
     </div>
     
     <div class="cipher">
