Adding the correct id and elements for the copy to clipboard functionality

--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -78,7 +78,8 @@
             </div>
             <div class="modal-footer">
               <!--<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-              <button type="button" class="btn" id="copy-btn">Copy</button>
+              <p id="status"></p>
+              <button type="button" class="btn" id="copy-btn" onclick="copyText()">Copy</button>
             </div>
           </div>
         </div>
