--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -29,7 +29,7 @@
     <div class="encrypt" id="encrypt">
       <h2>Caesar Cipher Encryption</h2>
       <select class="form-select form-select-lg mb-3" aria-label="Large select example" id="cipher-keys">
-        <option selected>Select a Cipher Key for Encryption</option>
+        <option value="default" selected>Select a Cipher Key for Encryption</option>
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
