Ensuring the first option has a default value

--- a/caesarCipher/index.html
+++ b/caesarCipher/index.html
@@ -90,7 +90,7 @@
     <div class="encrypt" id="decrypt">
       <h2>Caesar Cipher Decryption</h2>
       <select class="form-select form-select-lg mb-3" aria-label="Large select example" id="decipher-keys">
-        <option selected>Select a Cipher Key Decryption</option>
+        <option value="default" selected>Select a Cipher Key Decryption</option>
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
